--- a/claim.yaml
+++ b/claim.yaml
@@ -1,6 +1,8 @@
+---
 apiVersion: sop.io/v1alpha1
 kind: bucket
 metadata: 
   name: test
 spec:
-  bucketName: sop-local-test
+  name: sop-local-test
+  namespace: default
