--- a/providerconfig.yaml
+++ b/providerconfig.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: aws.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
@@ -9,3 +10,12 @@ spec:
       name: aws-creds
       namespace: crossplane-system
     source: Secret
+---
+apiVersion: kubernetes.crossplane.io/v1alpha1
+kind: ProviderConfig
+metadata:
+  name: default
+  namespace: crossplane-system
+spec:
+  credentials:
+    source: InjectedIdentity
